# Cereal

./: Cargo.toml  Readme.org
cereal-core/: Cargo.toml
cereal-core/src/: application.rs  database.rs  lib.rs  messages.rs  operations.rs  repository.rs  runtime.rs
src/: application.rs  customer.rs  database.rs  main.rs  messages.rs  operations.rs  order.rs  product.rs  repository.rs  runtime.rs
ws/: Cargo.toml
ws/src/: client.rs  macros.rs  main.rs  repositoryws.rs
