[package]
name = "cereal-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-rt = "2.9.0"
anyhow = "1.0.82"
futures-util = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
tempfile = "3.10.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }

[features]
ws = []
