[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cereal-core = { path="../cereal-core" }
actix = "0.13.3"
actix-web = "4.6.0"
actix-web-actors = "4.3.0"
awc = "3.5.0"
anyhow = "1.0.82"
futures-util = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
env_logger = "0.11.3"
clap = { version = "4.5.4", features = ["derive"] }
